--- a/index.html
+++ b/index.html
@@ -5,38 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jericho</title>
+    <script src="app.js"></script>
     <script
       src="https://kit.fontawesome.com/c8e4d183c2.js"
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style.css" />
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("WIO3U1HomMPbkgG2n");
+   })();
+</script>
   </head>
 
   <body>
-    <section id="landing_page">
+    <section id="landing_page"  onmousemove="moveBackground(event)">
       <nav>
         <figure>
           <img id="my_logo" src="/assets/logo.svg" alt="" />
         </figure>
         <ul class="unordered_list">
-          <li class="linksOfNav">
+          <li class="linksOfNav" onclick="toggleModal()">
             <a href="#" class=
             "nav_anchor
             hover-effect
             hover_effect_black
             ">About</a>
           </li>
-          <li class="linksOfNav">
-            <a href="#" class="nav_anchor
+          <li class="linksOfNav"> 
+            <a href="#projects" class="nav_anchor
             hover-effect
             hover_effect_black">Project</a>
           </li>
-          <li class="linksOfNav">
+          <li class="linksOfNav" onclick="toggleModal()"> 
             <a href="#" class="nav_anchor
             hover-effect
             hover_effect_black">Contact</a>
           </li>
-          <li class="linksOfNav">
+          <li class="linksOfNav" onclick="darkMode()">
             <a href="#" class="fas fa-adjust"></a>
           </li>
         </ul>
@@ -65,7 +74,7 @@
         </div>
       </header>
       <a href="#">
-        <button class="mail_button clicked">
+        <button class="mail_button clicked" onclick="toggleModal()">
           <i class="fas fa-envelope"></i>
         </button>
       </a>
@@ -109,27 +118,45 @@
           </div>
         </div>
       <div class="modal_half right_part">
+        <div>
+          <i class="fas fa-times exit clicked" onclick="toggleModal()"></i>
+        </div>
         <h3 class="modal_title modal_right">Let's have a chat</h3>
         <h4 class="modal_subtitle modal_sub_right_part">I'm currently open to new opportunities</h4>
-        <form id="contact__form">
+        <form id="contact__form" onsubmit="contact(event)">
           <div class="form_item">
             <label class="form_item_label">Name</label>
-            <input class="input" name="user_name" type="text" required></input>
+            <input class="input" name="user_name" type="text" ></input>
           </div>
           <div class="form_item">
             <label class="form_item_label">Email</label>
-            <input class="input" name="user_email" type="email" required></input>
+            <input class="input" name="user_email" type="email" ></input>
           </div>
           <div class="form_item">
             <label class="form_item_label">Message</label>
-            <textarea class="input" name="message" type="text" required></textarea>
+            <textarea class="input" name="message" type="text" ></textarea>
           </div>
           <button id="contact_submit" class="form_submit">
             Send it my way
           </button>
         </form>
+        <div class="modal_overlay modal_loading_state">
+          <i class="fas fa-spinner"></i>
+        </div>
+        <div class="modal_overlay modal_success_state">
+          Thanks for messaging! Looking forward speaking to you Soon
+        </div> 
       </div>
     </div>
+    <img src="/assets/semi circle.svg" class="shape shape_0">
+    <img src="/assets/circle.svg" class="shape shape_1">
+    <img src="/assets/squiggly.svg" class="shape shape_2">
+    <img src="/assets/circle.svg" class="shape shape_3">
+    <img src="/assets/triangle.svg" class="shape shape_4">
+    <img src="/assets/circle.svg" class="shape shape_5">
+    <img src="/assets/squiggly.svg" class="shape shape_6">
+    <img src="/assets/circle.svg" class="shape shape_7">
+    <img src="/assets/semi circle.svg" class="shape shape_8">
     </section>
 
     
@@ -244,7 +271,7 @@
     <footer>
       <div class="container">
         <div class="row row_footer">
-          <a href="" class="footer_anchor">
+          <a href="#" class="footer_anchor">
             <figure class="footer_logo">
               <img src="/assets/logo.svg" class="footer_logo_img" alt="" />
             </figure>
@@ -255,7 +282,7 @@
           </a>
           <div class="footer_social_lists">
             <a
-              href=""
+              href="https://github.com/Jericho12378" target="_blank"
               class="footer_link 
               hover-effect
               link__hover-effect--white"
@@ -263,19 +290,20 @@
               GitHub
             </a>
             <a
-              href=""
+              href="#"
               class="footer_link hover-effect link__hover-effect--white"
             >
               LinkedIn
             </a>
             <a
-              href=""
-              class="footer_link hover-effect link__hover-effect--white"
+              href="#" onclick="toggleModal()"
+              class="footer_link hover-effect link__hover-effect--white" 
+        
             >
               Contact
             </a>
             <a
-              href=""
+              href="#"
               class="footer_link hover-effect link__hover-effect--white"
             >
               Resume
