--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section id="landing_page"  onmousemove="moveBackground(event)">
       <nav>
         <figure>
-          <img id="my_logo" src="/assets/logo.svg" alt="" />
+          <img id="my_logo" src="./assets/logo.svg" alt="" />
         </figure>
         <ul class="unordered_list">
           <li class="linksOfNav" onclick="toggleModal()">
@@ -148,15 +148,15 @@
         </div> 
       </div>
     </div>
-    <img src="/assets/semi circle.svg" class="shape shape_0">
-    <img src="/assets/circle.svg" class="shape shape_1">
-    <img src="/assets/squiggly.svg" class="shape shape_2">
-    <img src="/assets/circle.svg" class="shape shape_3">
-    <img src="/assets/triangle.svg" class="shape shape_4">
-    <img src="/assets/circle.svg" class="shape shape_5">
-    <img src="/assets/squiggly.svg" class="shape shape_6">
-    <img src="/assets/circle.svg" class="shape shape_7">
-    <img src="/assets/semi circle.svg" class="shape shape_8">
+    <img src="./assets/semi circle.svg" class="shape shape_0">
+    <img src="./assets/circle.svg" class="shape shape_1">
+    <img src="./assets/squiggly.svg" class="shape shape_2">
+    <img src="./assets/circle.svg" class="shape shape_3">
+    <img src="./assets/triangle.svg" class="shape shape_4">
+    <img src="./assets/circle.svg" class="shape shape_5">
+    <img src="./assets/squiggly.svg" class="shape shape_6">
+    <img src="./assets/circle.svg" class="shape shape_7">
+    <img src="./assets/semi circle.svg" class="shape shape_8">
     </section>
 
     
@@ -171,7 +171,7 @@
             <li class="project">
               <div class="project_wrapper">
                 <img
-                  src="/assets/google mockup.png"
+                  src="./assets/google mockup.png"
                   class="project_img"
                   alt=""
                 />
@@ -205,7 +205,7 @@
             <li class="project">
               <div class="project_wrapper">
                 <img
-                  src="/assets/Eportfolio YT.png"
+                  src="./assets/Eportfolio YT.png"
                   class="project_img"
                   alt=""
                 />
@@ -239,7 +239,7 @@
             <li class="project">
               <div class="project_wrapper">
                 <img
-                  src="/assets/blinker mockup.png"
+                  src="./assets/blinker mockup.png"
                   class="project_img"
                   alt=""
                 />
@@ -273,7 +273,7 @@
         <div class="row row_footer">
           <a href="#" class="footer_anchor">
             <figure class="footer_logo">
-              <img src="/assets/logo.svg" class="footer_logo_img" alt="" />
+              <img src="./assets/logo.svg" class="footer_logo_img" alt="" />
             </figure>
             <span class="fotter_popup">
               Top
