Added reveal effect

--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
 
     <section id="projects">
       <div class="container">
-        <div class="row">
-          <h1 class="section_title">
+        <div class="row reveal">
+          <h1 class="section_title ">
             Here are some of my <span class="purple">Projects</span>
           </h1>
           <ul class="project_lists">
@@ -200,7 +200,7 @@
       </div>
 
       <div class="container">
-        <div class="row">
+        <div class="row reveal">
           <ul class="project_lists">
             <li class="project">
               <div class="project_wrapper">
@@ -234,7 +234,7 @@
       </div>
 
       <div class="container">
-        <div class="row">
+        <div class="row reveal">
           <ul class="project_lists">
             <li class="project">
               <div class="project_wrapper">
