Added pic of my Project to the Projects side

--- a/index.html
+++ b/index.html
@@ -171,21 +171,17 @@
             <li class="project">
               <div class="project_wrapper">
                 <img
-                  src="./assets/google mockup.png"
+                  src="./assets/1.png"
                   class="project_img"
                   alt=""
                 />
                 <div class="project_wrapper_bg"></div>
                 <div class="project_description">
                   <h3 class="project_title">Google In-Store</h3>
-                  <h4 class="project_sub_title">Html, CSS, JavaScript</h4>
+                  <h4 class="project_sub_title">Html, CSS, JavaScript, ReactJs</h4>
                   <p class="project_para">
-                    Google In-Store is a platform allowing Google retail
-                    employees to report any issues with their store products.
-                    Once an issue is reported, it is posted to an API which
-                    populates a separate platform's frontend - which is used by
-                    Google's vendors to fix the issue as soon as possible. I was
-                    the sole front-end developer of this application.
+                   Movie Browser, where you can search for movies and see the details about it
+                   The data that were displayed to the UI of the user are fetch from an API 
                   </p>
                   <div class="project_description_links">
                     <a href="#" class="about_me_list clicked">
